<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_blue"
        android:fitsSystemWindows="false"
        tools:context="com.wallpaper.wallpapersetter.ui.WallpaperSetterFragment">

        <ImageView
            android:id="@+id/image_source"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/wallpaper"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/left_button"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center|start"
            android:layout_marginStart="@dimen/_16sdp"
            android:contentDescription="@string/left_icon"
            android:src="@drawable/ic_baseline_chevron_left_24" />

        <ImageView
            android:id="@+id/right_button"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center|end"
            android:contentDescription="@string/right_icon"
            android:layout_marginEnd="@dimen/_16sdp"
            android:src="@drawable/ic_baseline_chevron_right_24" />

        <ImageView
            android:id="@+id/wallpaper_set_button"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="bottom|start"
            android:contentDescription="@string/wallpaper_set_button"
            android:layout_marginStart="@dimen/_70sdp"
            android:layout_marginBottom="@dimen/_90sdp"
            android:src="@drawable/ic_baseline_wallpaper_24" />

        <ImageView
            android:id="@+id/download_button"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/_70sdp"
            android:layout_marginBottom="@dimen/_90sdp"
            android:contentDescription="@string/download_button"
            android:src="@drawable/ic_baseline_download_24" />

        <ProgressBar
            android:id="@+id/circular_progress_image"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"
            />

    </FrameLayout>
</layout>